Topic Modeling using LDA

--- a/TopicModeling.ipynb
+++ b/TopicModeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIuAj2CIzYcKQlPQQ1nUTm",
+      "authorship_tag": "ABX9TyPgitm8NwR1Ip9Y9Qj+HR5i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,11 +221,7 @@
       "source": [
         "# Use CountVectorizer for LDA\n",
         "vectorizer = CountVectorizer(max_df=0.95, min_df=2, stop_words='english')\n",
-        "X = vectorizer.fit_transform(reviews_cleaned)\n",
-        "\n",
-        "# For TF-IDF vectorization (optional)\n",
-        "# tfidf_vectorizer = TfidfVectorizer(max_df=0.95, min_df=2, stop_words='english')\n",
-        "# X = tfidf_vectorizer.fit_transform(reviews_cleaned)"
+        "X = vectorizer.fit_transform(reviews_cleaned)"
       ],
       "metadata": {
         "id": "HOOiQTuOzLUd"
@@ -284,48 +280,6 @@
             "drink good cake cream got great delicious ice oyster really\n",
             "Topic 10:\n",
             "salad good dish delicious ordered meal restaurant dinner great steak\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Hyperparameter tuning for the number of topics\n",
-        "from sklearn.decomposition import LatentDirichletAllocation\n",
-        "from sklearn.feature_extraction.text import CountVectorizer\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "search_params = {'n_components': [5, 10, 15, 20], 'learning_decay': [0.5, 0.7, 0.9]}\n",
-        "lda_tuned = LatentDirichletAllocation(random_state=42)\n",
-        "model = GridSearchCV(lda_tuned, param_grid=search_params)\n",
-        "\n",
-        "model.fit(X)\n",
-        "\n",
-        "# Best Model\n",
-        "best_lda_model = model.best_estimator_\n",
-        "\n",
-        "print(\"Best Model's Params: \", model.best_params_)\n",
-        "print(\"Best Log Likelihood Score: \", model.best_score_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        },
-        "id": "4a6CPEOQzdVC",
-        "outputId": "2cd4b4d9-9367-4f3c-8a34-827eeb5794f2"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'X' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-98e0b321bcdf>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlda_tuned\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_grid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msearch_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Best Model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
           ]
         }
       ]
