Adding inferences and recommendations.

--- a/Final_Project_Vader_&_LDA_model.ipynb
+++ b/Final_Project_Vader_&_LDA_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBPWLmoRYerCy09oO9u6jY",
+      "authorship_tag": "ABX9TyOW03MkYoF8JK+6UfAmndJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -943,10 +943,10 @@
       "cell_type": "markdown",
       "source": [
         "### Lets label these Topics based on frequency of words and weights assigned to them:\n",
-        "* 1: Order & Dining Experience: Customer experience with ordering, waiting times, and interactions around the table.\n",
-        "* 2: Overall Experience: Positive reviews related to the quality of food and service, with a high likelihood of customers recommending the restaurant.\n",
-        "* 3: Ambiance & Location: Comments about the restaurant's ambiance, view, and parking or proximity to scenic spots like the beach.\n",
-        "* 4: Food Quality & Taste: Focus on the taste and quality of food, with emphasis on specific dishes and flavors."
+        "* 1- Order & Dining Experience: Customer experience with ordering, waiting times, and interactions around the table.\n",
+        "* 2- Overall Experience: Positive reviews related to the quality of food and service, with a high likelihood of customers recommending the restaurant.\n",
+        "* 3- Ambiance & Location: Comments about the restaurant's ambiance, view, and parking or proximity to scenic spots like the beach.\n",
+        "* 4- Food Quality & Taste: Focus on the taste and quality of food, with emphasis on specific dishes and flavors."
       ],
       "metadata": {
         "id": "kVZpfyzNKyWT"
@@ -1821,7 +1821,6 @@
         "    plt.title(f\"Sentiment: {'Positive' if sentiment >= 0 else 'Negative'} ({sentiment:.2f})\")  # Display sentiment score\n",
         "    plt.show()\n",
         "\n",
-        "\n",
         "# Initialize counters for positive and negative word clouds\n",
         "positive_count = 0\n",
         "negative_count = 0\n",
@@ -1831,15 +1830,14 @@
         "    text = row['cleaned_text']  # Use the cleaned review text\n",
         "    sentiment = row['Sentiment_Score']  # Get the sentiment score\n",
         "\n",
-        "    # Generate word cloud based on the sentiment score\n",
+        "# Generate word cloud based on the sentiment score\n",
         "    if sentiment >= 0 and positive_count < 2:  # Positive sentiment\n",
         "        generate_wordcloud(text, sentiment)\n",
         "        positive_count += 1\n",
         "    elif sentiment < 0 and negative_count < 2:  # Negative sentiment\n",
         "        generate_wordcloud(text, sentiment)\n",
         "        negative_count += 1\n",
-        "\n",
-        "    # Stop once 2 positive and 2 negative word clouds have been generated\n",
+        "# Stop once 2 positive and 2 negative word clouds have been generated\n",
         "    if positive_count >= 2 and negative_count >= 1:\n",
         "        break  # Exit the loop"
       ],
